--- a/marvel-project/Podfile
+++ b/marvel-project/Podfile
@@ -2,7 +2,7 @@
 # platform :ios, '9.0'
 
 def defaultPods 
-  #use_frameworks!
+  use_frameworks!
   inhibit_all_warnings!
   pod 'RxSwift'
   pod 'RxCocoa'
@@ -12,7 +12,7 @@ def defaultPods
 end
 
 def testPods
- # use_frameworks!
+  use_frameworks!
   inhibit_all_warnings!
  pod 'Quick'
  pod 'Nimble'
@@ -23,6 +23,6 @@ target 'marvel-project' do
 end
 
 target 'marvel-projectTests' do
-  inherit! :search_paths
+  #inherit! :search_paths
   testPods
 end
